# mobile

./: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  base.h  constants.h  containers.cpp  containers.h  effects.cpp  effects.h  forward.h  game.cpp  game.h  main.cpp  menu_creator.cpp  menu_creator.h  menu_templates.cpp  menu_templates.h  objects.cpp  objects.h  resource.h  settings.json  spaceBackground.cpp  spaceBackground.h  spaceShips.h  units.cpp  units.h  world.cpp  world.h
